--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -8,6 +8,14 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  analyzer: ^4.0.0
+  build: ^2.3.0
+  cached_annotation:
+    path: ../cached_annotation
+  meta: ^1.7.0
+  source_gen: ^1.2.2
 
 dev_dependencies:
+  generator_test: ^0.2.0  
   lint: ^1.8.2
+  test: ^1.21.1
