--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   build: ^2.3.0
   cached_annotation:
     path: ../cached_annotation
+  collection: ^1.16.0
   meta: ^1.7.0
   source_gen: ^1.2.2
 
