--- a/packages/cached/build.yaml
+++ b/packages/cached/build.yaml
@@ -1,10 +1,7 @@
 builders:
   cached:
     import: "package:cached/cached.dart"
-    builder_factories:
-      - cachedBuilder
-    build_extensions:
-      .dart:
-        - cached.dart
-      auto_apply: dependents
-      build_to: source
+    builder_factories: ["cachedBuilder"]
+    build_extensions: { ".dart": [".cached.dart"] }
+    auto_apply: dependents
+    build_to: source
