--- a/packages/cached/example/pubspec.yaml
+++ b/packages/cached/example/pubspec.yaml
@@ -1,6 +1,7 @@
 name: example
 description: A simple command-line application.
 version: 1.0.0
+publish_to: none
 
 environment:
   sdk: '>=2.16.1 <3.0.0'
