--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: melos run get
 
+      - name: Run build_runner
+        run: melos run generate
+
       - name: Analyze project source
         run: melos run analyze
 
