Add generation tests for class, constructor and part of method generation tests.

--- a/packages/cached/analysis_options.yaml
+++ b/packages/cached/analysis_options.yaml
@@ -3,4 +3,4 @@ include: package:lint/analysis_options.yaml
 analyzer:
   exclude:
     - ./**/*.cached.dart
-    - test/fixture/*
+    - test/inputs/*
