--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   source_gen: ^1.2.2
 
 dev_dependencies:
-  generator_test: ^0.2.0  
   lint: ^1.8.2
+  path: ^1.8.2
+  source_gen_test: ^1.0.3
   test: ^1.21.1
