add simple integration tests

--- a/packages/cached/build.yaml
+++ b/packages/cached/build.yaml
@@ -1,3 +1,12 @@
+targets:
+  $default:
+    builders:
+      cached:
+        generate_for:
+          - test/integration/**
+          - example/**
+
+
 builders:
   cached:
     import: "package:cached/cached.dart"
