--- a/packages/cached/example/pubspec.yaml
+++ b/packages/cached/example/pubspec.yaml
@@ -6,10 +6,10 @@ publish_to: none
 environment:
   sdk: '>=2.16.1 <3.0.0'
 
-
 dependencies:
   cached_annotation:
     path: ../../cached_annotation
+  http: ^0.13.4
 
 dev_dependencies:
   build_runner: ^2.1.10
