--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -1,7 +1,10 @@
 name: cached
-description: A new Flutter package project.
-version: 0.0.1
-publish_to: none #TODO: Remove when package will be published to pub.dev
+description: Dart package that generate cache for dart classes
+version: 1.0.0
+repository: https://github.com/Iteo/cached
+issue_tracker: https://github.com/Iteo/cached/issues
+homepage: https://github.com/Iteo/cached
+documentation: https://github.com/Iteo/cached/blob/master/packages/cached/README.md
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -9,8 +12,7 @@ environment:
 dependencies:
   analyzer: ^4.0.0
   build: ^2.3.0
-  cached_annotation:
-    path: ../cached_annotation #TODO: Change to version when package will be published to pub.dev
+  cached_annotation: ^1.0.0
   collection: ^1.16.0
   meta: ^1.7.0
   source_gen: ^1.2.2
