--- a/packages/cached_annotation/pubspec.yaml
+++ b/packages/cached_annotation/pubspec.yaml
@@ -1,7 +1,10 @@
 name: cached_annotation
-description: A new Flutter package project.
-version: 0.0.1
-homepage:
+description: Annotation package for cached lib
+version: 1.0.0
+repository: https://github.com/Iteo/cached
+issue_tracker: https://github.com/Iteo/cached/issues
+homepage: https://github.com/Iteo/cached
+documentation: https://github.com/Iteo/cached/blob/master/packages/cached/README.md
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
