--- a/packages/cached/example/pubspec.yaml
+++ b/packages/cached/example/pubspec.yaml
@@ -7,8 +7,7 @@ environment:
   sdk: '>=2.16.1 <3.0.0'
 
 dependencies:
-  cached_annotation:
-    path: ../../cached_annotation
+  cached_annotation: ^1.0.0
   http: ^0.13.4
 
 dev_dependencies:
