--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cached
-description: Dart package that generate cache for dart classes
-version: 1.0.0
+description: Dart package with build-in code generation. Simplifies and speedup creation of cache mechanism for dart classes.
+version: 1.0.0+1
 repository: https://github.com/Iteo/cached
 issue_tracker: https://github.com/Iteo/cached/issues
 homepage: https://github.com/Iteo/cached
@@ -10,15 +10,15 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
-  analyzer: ^4.0.0
+  analyzer: ^4.1.0
   build: ^2.3.0
   cached_annotation: ^1.0.0
   collection: ^1.16.0
-  meta: ^1.7.0
+  meta: ^1.8.0
   source_gen: ^1.2.2
 
 dev_dependencies:
-  build_runner: ^2.1.10
+  build_runner: ^2.1.11
   lint: ^1.8.2
   path: ^1.8.2
   source_gen_test: ^1.0.3
