--- a/packages/cached/example/pubspec.yaml
+++ b/packages/cached/example/pubspec.yaml
@@ -7,10 +7,12 @@ environment:
   sdk: '>=2.16.1 <3.0.0'
 
 dependencies:
-  cached_annotation: ^1.0.0
+  cached_annotation:
+    path: ../../cached_annotation
   http: ^0.13.4
 
 dev_dependencies:
   build_runner: ^2.1.10
-  cached: ^1.0.1
+  cached:
+    path: ../../cached
   lints: ^1.0.0
