--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -12,7 +12,8 @@ environment:
 dependencies:
   analyzer: ^4.1.0
   build: ^2.3.0
-  cached_annotation: ^1.0.0
+  cached_annotation:
+    path: ../cached_annotation
   collection: ^1.16.0
   meta: ^1.8.0
   source_gen: ^1.2.2
