add invalid_dependency to analysis option

--- a/packages/cached/analysis_options.yaml
+++ b/packages/cached/analysis_options.yaml
@@ -1,6 +1,8 @@
 include: package:lint/analysis_options.yaml
 
 analyzer:
+  errors:
+     invalid_dependency: ignore
   exclude:
     - ./**/*.cached.dart
     - test/inputs/*
