--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cached
 description: Dart package with build-in code generation. Simplifies and speedup creation of cache mechanism for dart classes.
-version: 1.0.3
+version: 1.0.4
 repository: https://github.com/Iteo/cached
 issue_tracker: https://github.com/Iteo/cached/issues
 homepage: https://github.com/Iteo/cached
@@ -10,7 +10,7 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
-  analyzer: ^4.1.0
+  analyzer: ">=3.0.0 <5.0.0"
   build: ^2.3.0
   cached_annotation:
     path: ../cached_annotation
