--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -24,5 +24,6 @@ dev_dependencies:
   build_runner: ^2.1.11
   lint: ^1.8.2
   path: ^1.8.2
+  rxdart: ^0.27.4
   source_gen_test: ^1.0.3
   test: ^1.21.1
