--- a/packages/cached/example/pubspec.yaml
+++ b/packages/cached/example/pubspec.yaml
@@ -7,10 +7,16 @@ environment:
   sdk: '>=2.16.1 <3.0.0'
 
 dependencies:
-  cached_annotation: ^1.1.0
+  retrofit: '>=3.0.0 <4.0.0'
+  cached_annotation: '^1.1.0'
   http: ^0.13.4
+  dio: ^4.0.6
+  json_serializable: ^6.2.0
+  json_annotation: ^4.5.0
 
 dev_dependencies:
+  retrofit_generator: '>=4.0.0 <5.0.0'
   build_runner: ^2.1.10
-  cached: ^1.1.0
+  cached:
+    path: ../../cached
   lints: ^1.0.0
