--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -14,7 +14,9 @@ dependencies:
   build: ^2.3.0
   cached_annotation: ^1.1.0
   collection: ^1.16.0
+  dio: ^4.0.6
   meta: ^1.7.0
+  retrofit: '>=3.0.0 <4.0.0'
   source_gen: ^1.2.2
 
 dev_dependencies:
