--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
-  analyzer: ">=3.0.0 <5.0.0"
+  analyzer: ^5.2.0
   build: ^2.3.0
   cached_annotation: 
     path: "../cached_annotation"
