--- a/packages/cached/example/pubspec.yaml
+++ b/packages/cached/example/pubspec.yaml
@@ -7,12 +7,10 @@ environment:
   sdk: '>=2.16.1 <3.0.0'
 
 dependencies:
-  cached_annotation: 
-    path: "../../cached_annotation"
+  cached_annotation: ^1.4.0
   http: ^0.13.4
 
 dev_dependencies:
   build_runner: ^2.1.10
-  cached: 
-    path: "../../cached"
+  cached: ^1.4.0
   lints: ^2.0.1
