--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 .idea
 .DS_Store
 
+*.iml
+
+
 coverage/
 *.class
 *.log
@@ -13,3 +16,6 @@ coverage/
 .history
 .svn/
 coverage.lcov
+
+# Melos-generated file
+pubspec_overrides.yaml
