feat: Add persistent storage support

--- a/packages/cached_annotation/analysis_options.yaml
+++ b/packages/cached_annotation/analysis_options.yaml
@@ -1,1 +1,11 @@
-include: package:lint/analysis_options.yaml
+include: package:linteo/analysis_options.yaml
+
+linter:
+  rules:
+    avoid_annotating_with_dynamic: false
+    comment_references: false
+    prefer_constructors_over_static_methods: false
+    avoid_print: false
+    avoid_classes_with_only_static_members: false
+    avoid_setters_without_getters: false
+
