--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -12,7 +12,8 @@ environment:
 dependencies:
   analyzer: ^5.2.0
   build: ^2.3.0
-  cached_annotation: ^1.4.0
+  cached_annotation:
+    path: ../cached_annotation
   collection: ^1.16.0
   meta: ^1.7.0
   source_gen: ^1.2.2
@@ -21,7 +22,7 @@ dependencies:
 dev_dependencies:
   async: ^2.9.0
   build_runner: ^2.1.11
-  lint: ^1.8.2
   path: ^1.8.2
   source_gen_test: ^1.0.3
   test: ^1.21.1
+  linteo: ^1.0.1
