feat: Add persistent storage example

--- a/melos.yaml
+++ b/melos.yaml
@@ -7,6 +7,9 @@ command:
 packages:
   - packages/**
 
+ignore:
+  - packages/cached/example/**
+
 scripts:
   get:
     run: melos exec dart pub get
