--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -12,8 +12,7 @@ environment:
 dependencies:
   analyzer: ^5.2.0
   build: ^2.3.0
-  cached_annotation:
-    path: ../cached_annotation
+  cached_annotation: ^1.5.0
   collection: ^1.16.0
   meta: ^1.7.0
   source_gen: ^1.2.2
