--- a/melos.yaml
+++ b/melos.yaml
@@ -20,8 +20,8 @@ scripts:
   test:coverage:
     run: melos exec  -c 1 --fail-fast -- "\$MELOS_ROOT_PATH/scripts/coverage.sh"
     description: Run Dart tests for a specific package in this project.
-    select-package:
-      dir-exists: test
+    packageFilters:
+      dirExists: test
 
   analyze:
     run: melos exec dart analyze
