--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -5,6 +5,9 @@ repository: https://github.com/Iteo/cached
 issue_tracker: https://github.com/Iteo/cached/issues
 homepage: https://github.com/Iteo/cached
 documentation: https://github.com/Iteo/cached/blob/master/packages/cached/README.md
+topics:
+  - cache
+  - lru
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -25,3 +28,7 @@ dev_dependencies:
   source_gen_test: ^1.0.3
   test: ^1.21.1
   linteo: ^1.0.1
+
+screenshots:
+  - description: The cached package logo.
+    path: cached_sygnet.png
