fix: Add value type checker during generation of storage init methods

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,9 @@ name: Build
 
 on:
   pull_request:
-    branches: [master, develop, main]
+    branches:
+      - master
+      - 'rc/*'
 
 jobs:
   build:
