--- a/packages/cached/example/cached_example/pubspec.yaml
+++ b/packages/cached/example/cached_example/pubspec.yaml
@@ -7,13 +7,14 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  cached_annotation: ^1.6.0
+  cached_annotation:
+    path: '../../../cached_annotation'
   http: ^0.13.4
 
 dev_dependencies:
   build_runner: ^2.4.6
   cached:
     path: '../../'
-  lints: ^2.1.1
+  linteo: ^1.0.1
 
 
