--- a/packages/cached/example/persistent_storage_example/pubspec.yaml
+++ b/packages/cached/example/persistent_storage_example/pubspec.yaml
@@ -7,7 +7,8 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  cached_annotation: ^1.6.0
+  cached_annotation:
+    path: '../../../cached_annotation'
   hive: ^2.2.3
   http: ^0.13.5
 
