--- a/packages/cached/example/persistent_storage_example/pubspec.yaml
+++ b/packages/cached/example/persistent_storage_example/pubspec.yaml
@@ -4,17 +4,21 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.6.0 <4.0.0"
 
 dependencies:
   cached_annotation:
-    path: '../../../cached_annotation'
-  hive: ^2.2.3
+    path: "../../../cached_annotation"
+  hive_ce: ^2.10.1
   http: ^0.13.5
+
+dependency_overrides:
+  cached_annotation:
+    path: "../../../cached_annotation"
 
 dev_dependencies:
   build_runner: ^2.4.6
   cached:
-    path: '../../'
+    path: "../../"
   linteo: ^1.0.1
-  hive_generator: 2.0.1
+  hive_ce_generator: 1.8.2
