--- a/packages/cached/pubspec.yaml
+++ b/packages/cached/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cached
 description: Dart package with build-in code generation. Simplifies and speedup creation of cache mechanism for dart classes.
-version: 1.7.1
+version: 1.8.0
 repository: https://github.com/Iteo/cached
 issue_tracker: https://github.com/Iteo/cached/issues
 homepage: https://github.com/Iteo/cached
@@ -22,9 +22,7 @@ environment:
 dependencies:
   analyzer: ^8.2.0
   build: ^4.0.0
-  # cached_annotation: ^1.7.1
-  cached_annotation:
-    path: ../cached_annotation
+  cached_annotation: ^1.8.0
   collection: ^1.16.0
   meta: ^1.17.0
   source_gen: ^4.0.1
